financial position is updated

--- a/calendar.html
+++ b/calendar.html
@@ -88,7 +88,6 @@ tbody tr td{
                         <a class="dropdown-item" href="maghsal.html"><b>Maghsal</b></a>
                         <a class="dropdown-item" href="educational-activities.html"><b>Educational Activities</b></a>
                         <a class="dropdown-item" href="marriage-bureau.html"><b>Marriage Bureau</b></a>
-                        <a class="dropdown-item" href="financials.html"><b>Financials</b></a>
                         <a class="dropdown-item" href="medical.html"><b>Medical</b></a>
                       </div>
                     </li>
@@ -100,6 +99,9 @@ tbody tr td{
                                 </li>
                       <li class="nav-item">
                           <a class="nav-link" href="gallery.html"><b>Gallery</b></a>
+                      </li>
+                      <li class="nav-item">
+                          <a class="nav-link" href="financials.html"><b>Financials</b></a>
                       </li>
                       <li class="nav-item">
                           <a class="nav-link" href="contact.html"><b>Contact</b></a>
@@ -128,7 +130,7 @@ tbody tr td{
   </tr>
   <tr>
     <td width="247" valign="top"><p dir="rtl">مجالس<span dir="ltr"> </span><span dir="ltr"> </span><span dir="ltr"><span dir="ltr"> </span><span dir="ltr"> </span></span>یکم   تا  10 محرم<br />
-      خطابت : مولانا افضل حیدری، محرم    1443 ھ )<span dir="ltr"> </span></p></td>
+      خطابت : مولانا افضل حیدری،     1443 ھ )<span dir="ltr"> </span></p></td>
     <td width="341" valign="top"><p dir="rtl"><span dir="ltr">  </span>عشرہ محرم<span dir="ltr"> </span></p></td>
   </tr>
   <tr>
@@ -140,66 +142,66 @@ tbody tr td{
   </tr>
   <tr>
     <td width="247" valign="top"><p dir="rtl">اعمال روز عاشور<br />
-      مجلس عصر عاشور (خطابت :مولانا    افضل حیدری، محرم 1443 ھ)<br />
+      مجلس عصر عاشور (خطابت :مولانا    افضل حیدری،  1443 ھ)<br />
       شبیہ ذوالجناح ،<br />
       فاقہ شکنی<br />
-      شام غریباں (خطابت : مولانا افضل    حیدری، محرم 1443 ھ)<span dir="ltr"> </span></p></td>
+      شام غریباں (خطابت : مولانا افضل    حیدری،  1443 ھ)<span dir="ltr"> </span></p></td>
     <td width="341" valign="top"><p dir="rtl">روز عاشور<span dir="ltr"> </span></p></td>
   </tr>
   <tr>
     <td width="247" valign="top"><p dir="rtl">خمسہ مجالس<br />
-      (خطابت :مولانا کمیل مہدوی،      محرم 1443 ھ)<span dir="ltr"> </span></p></td>
+      (خطابت :مولانا کمیل مہدوی،       1443 ھ)<span dir="ltr"> </span></p></td>
     <td width="341" valign="top"><p dir="rtl"><span dir="rtl"> </span><span dir="rtl"> </span><span dir="rtl"> </span><span dir="rtl"> </span> 11-15  محرم<span dir="ltr"> </span></p></td>
   </tr>
   <tr>
     <td width="247" valign="top"><p dir="rtl">خمسہ مجالس<span dir="ltr"> </span><br />
-      <span dir="rtl"> </span><span dir="rtl"> </span><span dir="rtl"> </span><span dir="rtl"> </span>(خطابت :مولانا  سید علی محمد نقوی    ،         محرم 1443 ھ)<span dir="ltr"> </span></p></td>
+      <span dir="rtl"> </span><span dir="rtl"> </span><span dir="rtl"> </span><span dir="rtl"> </span>(خطابت :مولانا  سید علی محمد نقوی    ،          1443 ھ)<span dir="ltr"> </span></p></td>
     <td width="341" valign="top"><p dir="rtl"><span dir="rtl"> </span><span dir="rtl"> </span><span dir="rtl"> </span><span dir="rtl"> </span>16-20   محرم<span dir="ltr"> </span></p></td>
   </tr>
   <tr>
     <td width="247" valign="top"><p dir="rtl">خمسہ مجالس<br />
-      (خطابت :مولانا  سید علی مرتضی زیدی،      محرم 1443 ھ)<span dir="ltr"> </span></p></td>
+      (خطابت :مولانا  سید علی مرتضی زیدی،       1443 ھ)<span dir="ltr"> </span></p></td>
     <td width="341" valign="top"><p dir="rtl"><span dir="rtl"> </span><span dir="rtl"> </span><span dir="rtl"> </span><span dir="rtl"> </span>21-25محرم<span dir="ltr"> </span><br />
       <span dir="ltr">25 </span><span dir="rtl"> </span><span dir="rtl"> </span><span dir="rtl"> </span><span dir="rtl"> </span> محرم شہادت امام  سجاد     علیہ السلام<br />
       (25 شب، تابوت شہادت امام    سجاد  علیہ السلام)<span dir="ltr"> </span></p></td>
   </tr>
   <tr>
     <td width="247" valign="top"><p dir="rtl">خمسہ مجالس<br />
-      (خطابت :مولانا  سید محمد تقی شاہ نقوی،      محرم 1443 ھ)<span dir="ltr"> </span></p></td>
+      (خطابت :مولانا  سید محمد تقی شاہ نقوی،       1443 ھ)<span dir="ltr"> </span></p></td>
     <td width="341" valign="top"><p dir="rtl"><span dir="rtl"> </span><span dir="rtl"> </span><span dir="rtl"> </span><span dir="rtl"> </span>26-30 محرم <span dir="ltr"> </span><span dir="ltr"> </span><span dir="ltr"><span dir="ltr"> </span><span dir="ltr"> </span> </span></p></td>
   </tr>
   <tr>
     <td width="247" valign="top"><p dir="rtl">خمسہ مجالس<br />
-      (خطابت :مولانا  اخلاق حسین شیرازی،      محرم 1443 ھ)<span dir="ltr"> </span></p></td>
+      (خطابت :مولانا  اخلاق حسین شیرازی،       1443 ھ)<span dir="ltr"> </span></p></td>
     <td width="341" valign="top"><p dir="rtl"><span dir="rtl"> </span><span dir="rtl"> </span><span dir="rtl"> </span><span dir="rtl"> </span>1- 5  صفر </p></td>
   </tr>
   <tr>
     <td width="247" valign="top"><p dir="rtl">خمسہ مجالس<br />
-      (خطابت :مولانا غلام رضا روحانی، محرم 1443 ھ)<span dir="ltr"> </span></p></td>
+      (خطابت :مولانا غلام رضا روحانی،  1443 ھ)<span dir="ltr"> </span></p></td>
     <td width="341" valign="top"><p dir="rtl"><span dir="rtl"> </span><span dir="rtl"> </span><span dir="rtl"> </span><span dir="rtl"> </span>6-10  صفر<br />
       (7   صفر ولادت امام موسیٰ کاظم  علیہ السلام)</p></td>
   </tr>
   <tr>
     <td width="247" valign="top"><p dir="rtl">خمسہ مجالس <br />
-      (خطابت :مولانا سید حسن ظفر نقوی    ،      محرم 1443 ھ) </p></td>
+      (خطابت :مولانا سید حسن ظفر نقوی    ،       1443 ھ) </p></td>
     <td width="341" valign="top"><p dir="rtl">11-15  صفر<br />
       ( 13 شب شہادت حضرت سکینہ)</p></td>
   </tr>
   <tr>
     <td width="247" valign="top"><p dir="rtl">خمسہ مجالس <br />
       (مجالس چہلم امام حسین علیہ    السلام)<br />
-      (خطابت :مولانا شیخ سخاوت علی    قمی،      محرم 1443 ھ)<span dir="ltr"> </span></p></td>
+      (خطابت :مولانا شیخ سخاوت علی    قمی،       1443 ھ)<span dir="ltr"> </span></p></td>
     <td width="341" valign="top"><p dir="rtl"><span dir="rtl"> </span><span dir="rtl"> </span><span dir="rtl"> </span><span dir="rtl"> </span>16-20  صفر<br />
       ( 17 شب تابوت شہادت امام علی    رضا علیہ السلام)</p></td>
   </tr>
   <tr>
     <td width="247" valign="top"><p dir="rtl">خمسہ مجالس<br />
-      (خطابت :مولانا حافظ سید محمد    حیدر نقوی،      محرم 1443 ھ)<span dir="ltr"> </span></p></td>
+      (خطابت :مولانا حافظ سید محمد    حیدر نقوی،       1443 ھ)<span dir="ltr"> </span></p></td>
     <td width="341" valign="top"><p dir="rtl"><span dir="rtl"> </span><span dir="rtl"> </span><span dir="rtl"> </span><span dir="rtl"> </span>21-25  صفر</p></td>
   </tr>
   <tr>
     <td width="247" valign="top"><p dir="rtl">خمسہ مجالس<br />
-      (خطابت :مولانا محمد رضا  دا ؤدانی ،       محرم 1443 ھ)<span dir="ltr"> </span></p></td>
+      (خطابت :مولانا محمد رضا  دا ؤدانی ،       1443 ھ)<span dir="ltr"> </span></p></td>
     <td width="341" valign="top"><p dir="rtl"><span dir="rtl"> </span><span dir="rtl"> </span><span dir="rtl"> </span><span dir="rtl"> </span>26-30  صفر<br />
       (28 شب  وصال رسول خدا ص، شہادت امام حسن علیہ    السلام)<br />
       (28 شب تابوت )<br />
