--- a/upcoming.html
+++ b/upcoming.html
@@ -81,8 +81,7 @@
                         <a class="dropdown-item" href="maghsal.html"><b>Maghsal</b></a>
                         <a class="dropdown-item" href="educational-activities.html"><b>Educational Activities</b></a>
                         <a class="dropdown-item" href="marriage-bureau.html"><b>Marriage Bureau</b></a>
-<a class="dropdown-item" href="financials.html"><b>Financials</b></a>
-<a class="dropdown-item" href="medical.html"><b>Medical</b></a>
+                        <a class="dropdown-item" href="medical.html"><b>Medical</b></a>
                       </div>
                     </li>
                                 <li class="nav-item">
@@ -93,6 +92,9 @@
                                 </li>
                       <li class="nav-item">
                           <a class="nav-link" href="gallery.html"><b>Gallery</b></a>
+                      </li>
+                      <li class="nav-item">
+                          <a class="nav-link" href="financials.html"><b>Financials</b></a>
                       </li>
                       <li class="nav-item">
                           <a class="nav-link" href="contact.html"><b>Contact</b></a>
@@ -117,66 +119,66 @@
               <div class="row">
                   <div class="col-lg-3 mt-3">
                       <div class="rounded bg-white p-2">
-                          <div class="img_blog">
+                          <!-- <div class="img_blog">
                               <a href="images/blog/blog-1.jpg" id="pop" class="image-popup-vertical-fit">
                                <img src="images/blog/blog-1.jpg" id="imageresource" alt="" class="img-fluid rounded mx-auto d-block">
                               </a>
+                           </div> -->
+                           <div class="content_blog pt-3 pb-3">
+                               <h5 class="font-weight-bold mb-0 text-center">Milad Masood 4 Jamidul Awal Hazrat Zainab SA</h5>
+                               <div class="mt-3">
+                                   <p class="mt-3 desc_blog text-muted ">Khitabat Molana Syed Iftikhar Hussain Naqvi</p>
+                               </div>
                            </div>
-                          <div class="content_blog pt-3 pb-3">
-                              <h5 class="font-weight-bold mb-0">Jashn-e-Wiladat Imam Hassan Askari AS</h5>
-                              <div class="mt-3">
-                                  <p class="mt-3 desc_blog text-muted ">Molana Syed Muzamil Hussain Naqvi theek 7 bajy shab khitab farmayen gy.</p>
-                              </div>
-                          </div>
                       </div>
                   </div>
                   <div class="col-lg-3 mt-3">
                       <div class="rounded bg-white p-2">
-                          <div class="img_blog">
+                          <!-- <div class="img_blog">
                               <a href="images/blog/blog-2.jpg" id="pop" class="image-popup-vertical-fit">
                                <img src="images/blog/blog-2.jpg" id="imageresource" alt="" class="img-fluid rounded mx-auto d-block">
                               </a>
-                          </div>
+                          </div> -->
                           <div class="content_blog pt-3 pb-3">
                               <div>
-                                  <h5 class="font-weight-bold mb-0"><a href="#" class="text-dark">Majlis Barsi Braye Isalo Swab Syed Shokat Hussain Ibne Syed Arid Hussain</a></h5>
+                                  <h5 class="font-weight-bold mb-0 text-center"><a href="#" class="text-dark ">13 Jamidul Awal Shahadat Hazrat Fatima Zahra SA</a></h5>
                               </div>
                               <div class="mt-3">
-                                  <p class="mt-3 desc_blog text-muted">Molana Syed Muzamil Hussain Naqvi theek 7 bajy shab khitab farmayen gy.</p>
+                                  <p class="mt-3 desc_blog text-muted">Khitabat Molana Naseer Haider</p>
                               </div>
                           </div>
                       </div>
                   </div>
                   <div class="col-lg-3 mt-3">
                       <div class="rounded bg-white p-2">
-                          <div class="img_blog">
+                          <!-- <div class="img_blog">
                               <a href="images/blog/blog-3.jpg" id="pop" class="image-popup-vertical-fit">
                                <img src="images/blog/blog-3.jpg" id="imageresource" alt="" class="img-fluid rounded mx-auto d-block">
                               </a>
-                          </div>
+                          </div> -->
                           <div class="content_blog pt-3 pb-3">
                               <div>
-                                  <h5 class="font-weight-bold mb-0"><a href="#" class="text-dark">Jashne Sadqain</a></h5>
+                                  <h5 class="font-weight-bold mb-0 text-center"><a href="#" class="text-dark">15 Jamidul Awal Wiladat Hazrat Imam Zainul Abideen AS</a></h5>
                               </div>
                               <div class="mt-3">
-                                  <p class="mt-3 desc_blog text-muted">Molana Syed Ali Muhammad Naqvi, Molana Haider Alvi thek 7 bjyshb khitab farmayen gy.</p>
+                                  <p class="mt-3 desc_blog text-muted">Khitabat Molana Syed Waqar Zaidi</p>
                               </div>
                           </div>
                       </div>
                   </div>
                   <div class="col-lg-3 mt-3">
                       <div class="rounded bg-white p-2">
-                          <div class="img_blog">
+                          <!-- <div class="img_blog">
                               <a href="images/blog/blog-4.jpg" id="pop" class="image-popup-vertical-fit">
                                <img src="images/blog/blog-4.jpg" id="imageresource" alt="" class="img-fluid rounded mx-auto d-block">
                               </a>
-                          </div>
+                          </div> -->
                           <div class="content_blog pt-3 pb-3">
                               <div>
-                                  <h5 class="font-weight-bold mb-0"><a href="#" class="text-dark">Khamsa Majalis(3-8)Rabiul Awal</a></h5>
+                                  <h5 class="font-weight-bold mb-0 text-center"><a href="#" class="text-dark">Ayyame Fatimiyah SA</a></h5>
                               </div>
                               <div class="mt-3">
-                                  <p class="mt-3 desc_blog text-muted">Allama Arif Hussain Kazmi 8 bjy shb khitab farmaye gy.</p>
+                                  <p class="mt-3 desc_blog text-muted">Khitabat Molana Ikhlaq Hussain Shirazi</p>
                               </div>
                           </div>
                       </div>
