--- a/about.html
+++ b/about.html
@@ -81,7 +81,6 @@
                         <a class="dropdown-item" href="maghsal.html"><b>Maghsal</b></a>
                         <a class="dropdown-item" href="educational-activities.html"><b>Educational Activities</b></a>
                         <a class="dropdown-item" href="marriage-bureau.html"><b>Marriage Bureau</b></a>
-                        <a class="dropdown-item" href="financials.html"><b>Financials</b></a>
                         <a class="dropdown-item" href="medical.html"><b>Medical</b></a>
                       </div>
                     </li>
@@ -93,6 +92,9 @@
                       </li>
                       <li class="nav-item">
                           <a class="nav-link" href="gallery.html"><b>Gallery</b></a>
+                      </li>
+                      <li class="nav-item">
+                          <a class="nav-link" href="financials.html"><b>Financials</b></a>
                       </li>
                       <li class="nav-item">
                           <a class="nav-link" href="contact.html"><b>Contact</b></a>
