--- a/home.html
+++ b/home.html
@@ -81,7 +81,7 @@
                         <a class="dropdown-item" href="maghsal.html"><b>Maghsal</b></a>
                         <a class="dropdown-item" href="educational-activities.html"><b>Educational Activities</b></a>
                         <a class="dropdown-item" href="marriage-bureau.html"><b>Marriage Bureau</b></a>
-                        <a class="dropdown-item" href="financials.html"><b>Financials</b></a>
+
                         <a class="dropdown-item" href="medical.html"><b>Medical</b></a>
                       </div>
                     </li>
@@ -93,6 +93,9 @@
                       </li>
                       <li class="nav-item">
                           <a class="nav-link" href="gallery.html"><b>Gallery</b></a>
+                      </li>
+                      <li class="nav-item">
+                          <a class="nav-link" href="financials.html"><b>Financials</b></a>
                       </li>
                       <li class="nav-item">
                           <a class="nav-link" href="contact.html"><b>Contact</b></a>
@@ -264,19 +267,6 @@
                   <div class="col-lg-4">
                         <div class="text-center services-boxes rounded p-4 mt-4 bg">
                             <div class="mt-4 bg">
-                                <i class="fas fa-money-check-alt text-custom h2"></i>
-                                <h5 class="mb-0">Financials</h5>
-                                <div class="services-title-border"></div>
-                                <p class="text-muted mt-3">Accounts of the trust are kept properly on a tailor-made software etc.</p>
-                            </div>
-                            <div class="text-center">
-                                <a href="financials.html" class="btn btn-custom">Read More!</a>
-                            </div>
-                        </div>
-                    </div>
-                  <div class="col-lg-4">
-                        <div class="text-center services-boxes rounded p-4 mt-4 bg">
-                            <div class="mt-4 bg">
                                 <i class="fas fa-medkit text-custom h2"></i>
                                 <h5 class="mb-0">Medical Centre</h5>
                                 <div class="services-title-border"></div>
@@ -287,6 +277,21 @@
                             </div>
                         </div>
                     </div>
+
+                  <div class="col-lg-4">
+                        <div class="text-center services-boxes rounded p-4 mt-4 bg">
+                            <div class="mt-4 bg">
+                                <i class="fas fa-money-check-alt text-custom h2"></i>
+                                <h5 class="mb-0">Financials</h5>
+                                <div class="services-title-border"></div>
+                                <p class="text-muted mt-3">Accounts of the trust are kept properly on a tailor-made software etc.</p>
+                            </div>
+                            <div class="text-center">
+                                <a href="financials.html" class="btn btn-custom">Read More!</a>
+                            </div>
+                        </div>
+                    </div>
+
                   </div>
             </div>
         </section>
