--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ body {
     </div>
     <div class="col-md-12 text-center">
         <br>
-      <a href="https://www.facebook.com/alsadiqtrust/live/"><img src="images/frontpage/Untitled-333.png" alt="Italian Trulli"></a>
+      <a href="https://www.facebook.com/alsadiqtrust/"><img src="images/frontpage/Untitled-333.png" alt="Italian Trulli"></a>
 
 
     </div>
