new folder with pdf files added

--- a/financials.html
+++ b/financials.html
@@ -115,7 +115,7 @@
                             <h5 class="mb-0">Financials</h5>
                             <div class="services-title-border"></div>
                             <p class="text-muted mt-3">Accounts of the trust are kept properly on a tailor-made software. Separate accounts for different Heads like Majaliso Mahafil, Masjid, Construction, Khumas, Zakat, Ramadan Funds, Niaz etc are maintained to ensure that donations are spent on donors wish/instructions. Accounts of the trust are audited by professional registered audit firms every year.</p>
-                            <a href="/audited_financials/">View all audited financials</a>
+                            <a href="/all_audited_financials/">View all audited financials</a>
                         </div>
                     </div>
                 </div>
